--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.0.3
   firebase_auth: ^1.1.0
-
+  font_awesome_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test: ^1.16.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
