--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.0.3
   firebase_auth: ^1.1.0
+  google_sign_in: ^5.0.2
+  provider: ^5.0.0
   font_awesome_flutter: ^9.0.0
 
 dev_dependencies:
@@ -50,7 +52,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
