--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^5.0.2
   provider: ^5.0.0
   font_awesome_flutter: ^9.0.0
+  sk_onboarding_screen: ^1.0.1
 
 dev_dependencies:
   flutter_test:
