--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   provider: ^5.0.0
   font_awesome_flutter: ^9.0.0
   sk_onboarding_screen: ^1.0.1
+  google_maps_flutter: ^2.0.6
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
