--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   font_awesome_flutter: ^9.0.0
   sk_onboarding_screen: ^1.0.1
   google_maps_flutter: ^2.0.6
+  geolocator: ^7.2.0+1
 
 dev_dependencies:
   flutter_test:
