--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   sk_onboarding_screen: ^1.0.1
   google_maps_flutter: ^2.0.6
   geolocator: ^7.2.0+1
+  flutter_geofire: ^2.0.0
+  firebase_database: ^7.1.1
 
 dev_dependencies:
   flutter_test:
