--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="fast_aid"
+        android:label="Fast Aid"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
